Article Design Improvement

--- a/articulo.html
+++ b/articulo.html
@@ -8,13 +8,19 @@
 <body>
     <article>
 
-        <head>
-            <h1>Titulo del articulo.</h1>
-            <h2>By Platzi</h2>
-        </head>
-        <hr>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates voluptatum officia aspernatur officiis
-            nihil labore optio temporibus id repellat sit.</p>
+        <header>
+            <div class="profile-picture"></div>
+            <h1>ByJuanii_44</h1>
+            <span></span>
+            <h2>4h ago</h2>
+        </header>
+        <div class="content">
+            <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates voluptatum officia aspernatur
+                officiis
+                nihil labore optio temporibus id repellat sit.
+            </p>
+        </div>
 
     </article>
 </body>
