Article name change

--- a/articulo.html
+++ b/articulo.html
@@ -10,7 +10,7 @@
 
         <header>
             <div class="profile-picture"></div>
-            <h1>ByJuanii_44</h1>
+            <h1>Juan Morena</h1>
             <span></span>
             <h2>4h ago</h2>
         </header>
