Article wrapper created.

--- a/articulo.html
+++ b/articulo.html
@@ -6,23 +6,25 @@
 </head>
 
 <body>
-    <article>
+    <div class="wrapper">
 
-        <header>
-            <div class="profile-picture"></div>
-            <h1>Juan Morena</h1>
-            <span></span>
-            <h2>4h ago</h2>
-        </header>
-        <div class="content">
-            <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates voluptatum officia aspernatur
-                officiis
-                nihil labore optio temporibus id repellat sit.
-            </p>
-        </div>
+        <article>
+            <header>
+                <div class="profile-picture"></div>
+                <h1>Juan Morena</h1>
+                <span></span>
+                <h2>4h ago</h2>
+            </header>
+            <div class="content">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi explicabo, ea repudiandae minus
+                    suscipit nihil dolore ipsum laborum nemo omnis at, porro quis voluptatem! Deserunt iusto
+                    reprehenderit sunt hic voluptates.
+                </p>
+            </div>
+        </article>
 
-    </article>
+    </div>
 </body>
 
 </html>
