Agrego otro parrado al articulo

--- a/articulo.html
+++ b/articulo.html
@@ -13,8 +13,13 @@
             <h2>By Platzi</h2>
         </head>
         <hr>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates voluptatum officia aspernatur officiis
-            nihil labore optio temporibus id repellat sit.</p>
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates voluptatum officia aspernatur officiis
+            nihil labore optio temporibus id repellat sit.
+        </p>
+        <br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci asperiores voluptate quam inventore ea modi
+            ullam aspernatur deserunt veritatis impedit.</p>
 
     </article>
 </body>
