Hice un cambio y justo cambie algo que va a venir de la branch development

--- a/articulo.html
+++ b/articulo.html
@@ -21,6 +21,7 @@
                     suscipit nihil dolore ipsum laborum nemo omnis at, porro quis voluptatem! Deserunt iusto
                     reprehenderit sunt hic voluptates.
                 </p>
+                <p>Lorem, ipsum dolor.</p>
             </div>
         </article>
 
