Profile Picture Added,

--- a/articulo.html
+++ b/articulo.html
@@ -10,7 +10,9 @@
 
         <article>
             <header>
-                <div class="profile-picture"></div>
+                <div class="profile-picture">
+                    <img src="img/profile.jpg" alt="">
+                </div>
                 <h1>Juan Morena</h1>
                 <span></span>
                 <h2>4h ago</h2>
